--- a/minf.html
+++ b/minf.html
@@ -10,6 +10,7 @@
 			<h1>test</h1>
 			<div id="header">
 				<h1>Meine Webseite</h1>
+				<h2>Meine auch!</h2>
 			</div>
 			<div id="main">
 				<div id ="navigation">
